# rust-sdk

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  cargo-release.toml  ci.sh  clippy.toml  generate.rs  release-plz.toml  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: main.yml  release-plz.yml  rust.yml
api_key_stamper/: CHANGELOG.md  Cargo.toml  README.md
api_key_stamper/fuzz/: Cargo.toml
api_key_stamper/fuzz/fuzz_targets/: 1_p256apikey_from_bytes.rs  2_p256apikey_from_string.rs  3_secp256k1apikey_from_bytes.rs
api_key_stamper/fuzz/src/: lib.rs
api_key_stamper/src/: lib.rs
attestation-validator/: Cargo.toml  README.md
attestation-validator/src/: main.rs
auth/: Cargo.toml  README.md
auth/docs/: git-signing.md  ssh-agent.md
auth/src/: cli.rs  config.rs  lib.rs  main.rs  ssh.rs  turnkey.rs
auth/src/commands/: agent.rs  config.rs  git_sign.rs  mod.rs  public_key.rs  whoami.rs
auth/src/ssh/: git.rs  mod.rs  protocol.rs
auth/tests/: agent_command.rs  cli.rs  config_command.rs  config_resolution.rs  git_sign.rs  public_key.rs  public_key_command.rs  ssh_agent.rs
auth/tests/support/: mod.rs
client/: CHANGELOG.md  Cargo.toml  README.md
client/src/: lib.rs  retry.rs
codegen/: Cargo.toml  README.md  activity_version_caps.json
codegen/src/: client.template.rs  main.rs  transform.rs
enclave_encrypt/: CHANGELOG.md  Cargo.toml  README.md
enclave_encrypt/src/: client.rs  errors.rs  lib.rs  quorum_public_key.rs  server.rs
examples/: .env.example  Cargo.toml  README.md  create_sub_organization.rs  create_wallet.rs  list_wallets.rs  sign_raw_payload.rs
examples/src/: lib.rs
proofs/: CHANGELOG.md  Cargo.toml  README.md  turnkey_attestation.txt
proofs/src/: error.rs  lib.rs  syntactic_validation.rs  types.rs
proto/: README.md  activities.json
proto/immutable/activity/api/: api_key.proto
proto/immutable/activity/billing/: activate_billing_tier.proto  delete_payment_method.proto  set_payment_method.proto
proto/immutable/activity/v1/: activity.proto
proto/immutable/common/v1/: common.proto
proto/immutable/data/v1/: common.proto  earn.proto  invitation.proto  policy.proto  private_key.proto  smart_contract_interface_reference.proto  tag.proto  user.proto  wallet.proto
proto/immutable/data/v10/: organization_data.proto
proto/immutable/data/v11/: organization_data.proto
proto/immutable/data/v12/: organization_data.proto
proto/immutable/data/v13/: organization_data.proto  user.proto
proto/immutable/data/v14/: organization_data.proto  user.proto
proto/immutable/data/v15/: organization_data.proto  user.proto
proto/immutable/data/v16/: organization_data.proto
proto/immutable/data/v17/: mfa_policy.proto  organization_data.proto  user.proto
proto/immutable/data/v2/: private_key.proto  user.proto
proto/immutable/models/v1/: models.proto
proto/immutable/sdk_models/v1/: models.proto
proto/immutable/webauthn/v1/: webauthn.proto
proto/private/data/v1/: organization_data.proto
proto/private/fetcher/v1/: fetcher.proto
proto/private/parser/v1/: parser.proto  solana_parser.proto  tron_parser.proto
proto/private/signer/v1/: signer.proto
proto/private/ump/v1/: ump.proto
proto/services/coordinator/public/v1/: public_api.proto
scripts/: pre-commit
src/: client.rs  errors.rs  lib.rs  models.rs  requests.rs  responses.rs
tvc/: .env.example  AGENTS.md  CHANGELOG.md  Cargo.toml  JSON_OUTPUT_MODE_PLAN_0.md  JSON_OUTPUT_MODE_PLAN_1.md  PLAN.md  README.md
tvc-axum/: Cargo.toml  README.md
tvc-axum/src/: lib.rs  verify.rs
tvc-axum/tests/: qos_json.rs  response_signing.rs
tvc-utils/: Cargo.toml  README.md
tvc-utils/src/: fake.rs  lib.rs  verify.rs
tvc-utils/tests/: fake_manifest.rs  verify.rs
tvc/fixtures/: manifest.json  seed.hex  valid_provisioning_details.json
tvc/src/: approvals.rs  cli.rs  client.rs  config.rs  errors.rs  exit.rs  lib.rs  local_operator_key.rs  logging.rs  main.rs  operator.rs  operator_key.rs  outcome.rs  output.rs  pair.rs  pivot_digest.rs  prompts.rs  provisioning.rs  pull_secret.rs  quorum_key_metadata.rs  replay.rs  util.rs
tvc/src/commands/: app_status.rs  approve_manifest.rs  auth.rs  confirmation.rs  consensus.rs  display.rs  login.rs  mod.rs  re_encrypt_share.rs  whoami.rs
tvc/src/commands/activity/: approve.rs  list.rs  mod.rs  reject.rs
tvc/src/commands/app/: create.rs  delete.rs  get_status.rs  init.rs  list.rs  mod.rs  set_live_deploy.rs  status.rs
tvc/src/commands/deploy/: approve.rs  create.rs  debug_logs.rs  delete.rs  get_status.rs  init.rs  mod.rs  post_share.rs  provisioning_details.rs  restore.rs  status.rs  validate_pivot_digest.rs
tvc/src/commands/keys/: create_quorum_key.rs  generate_local_quorum_key.rs  generate_quorum_key.rs  init_local_quorum_key.rs  init_quorum_key.rs  mod.rs  re_encrypt_local_share.rs  re_encrypt_share.rs
tvc/src/commands/operator/: create.rs  mod.rs
tvc/src/commands/policy/: init.rs  mod.rs
tvc/src/config/: app.rs  deploy.rs  mod.rs  quorum_key.rs  turnkey.rs
tvc/src/config/turnkey/: api_key.rs  mod.rs  passkey_session.rs  qos_operator_key.rs
tvc/src/passkey/: mod.rs
tvc/tests/: activity.rs  app_create_help.rs  app_delete.rs  app_list.rs  app_set_live_deploy.rs  approve_manifest.rs  auth_env.rs  config_validation.rs  deploy_approve.rs  deploy_consensus.rs  deploy_create_help.rs  deploy_debug_logs.rs  deploy_dedup.rs  deploy_delete.rs  deploy_init_help.rs  deploy_post_share.rs  deploy_provisioning_details.rs  deploy_restore.rs  format_json.rs  global_flags.rs  json_output.rs  keys_create_quorum_key.rs  keys_generate_local_quorum_key.rs  keys_generate_quorum_key.rs  keys_re_encrypt_local_share.rs  keys_re_encrypt_share.rs  login.rs  message_format.rs  non_interactive.rs  operator_create.rs  passkey.rs  passkey_login.rs  policy_init.rs  pty.rs  re_encrypt_share.rs  whoami.rs
webauthn_stamper/: Cargo.toml
webauthn_stamper/src/: lib.rs
