[workspace]
members = [
  # Crate to produce stamps with an API key
  "api_key_stamper",
  # Automated testing for the crate above
  "api_key_stamper/fuzz",
  # Main API client (generated)
  "client",
  # Contains tools and script to generate client code from proto
  "codegen",
  # Contains utilities to encrypt and decrypt data to and from Turnkey secure enclaves
  "enclave_encrypt",
  # Examples using the Turnkey stamper
  "examples",
  # Contains utilities to work with Turnkey proofs (boot proofs, app proofs)
  "proofs",
]
resolver = "2"
