[package]
name = "turnkey_api_key_stamper"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
description = "Generate signatures over Turnkey API requests using a P-256 key."
readme = "README.md"
repository = "https://github.com/tkhq/rust-sdk"
documentation = "https://docs.rs/turnkey_api_key_stamper"
keywords = ["turnkey", "api-key", "stamp", "ecdsa", "signature", "p256"]
categories = ["cryptography", "authentication", "api-bindings"]

[dependencies]
base64 = { version = "0.22.0", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
serde = { version = "1.0.197", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.115", default-features = false, features = ["std"] }
thiserror = { version = "2.0.12", default-features = false }

[dev-dependencies]
tempfile = { version = "3.19.1", default-features = false }
