[package]
name = "turnkey_api_key_stamper"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Generate signatures over Turnkey API requests using a P-256 key."
readme = "README.md"
repository = "https://github.com/tkhq/rust-sdk"
documentation = "https://docs.rs/turnkey_api_key_stamper"
keywords = ["turnkey", "api-key", "stamp", "signature", "p256"]
categories = ["cryptography", "authentication", "api-bindings"]

[dependencies]
base64.workspace = true
hex.workspace = true
p256.workspace = true
k256.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
signature.workspace = true
