[package]
name = "auth"
version = "0.0.0-alpha.0"
edition = "2021"
license = "Apache-2.0"
description = "CLI for Turnkey-backed authentication and Git signing workflows"
repository = "https://github.com/tkhq/rust-sdk"
homepage = "https://turnkey.com"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["env"] }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
toml = { workspace = true }
turnkey_api_key_stamper = { workspace = true }
turnkey_client = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
