[package]
name = "turnkey_client"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
description = "A Rust client to interact with the Turnkey API."
repository = "https://github.com/tkhq/rust-sdk"
homepage = "https://turnkey.com"
readme = "README.md"
documentation = "https://docs.rs/turnkey_client"
keywords = ["turnkey", "api", "client", "cryptography"]
categories = ["api-bindings"]

[lib]
doctest = false

[dependencies]
mime = { version = "0.3.17" }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
turnkey_api_key_stamper = { path = "../api_key_stamper" }
prost = { version = "0.12" }
prost-types = { version = "0.12" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0.12" }
tokio = { version = "1.44.2" }

[dev-dependencies]
wiremock = "0.6"
http = "0.2"
