[package]
name = "turnkey_client"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust client to interact with the Turnkey API."
repository = "https://github.com/tkhq/rust-sdk"
homepage = "https://turnkey.com"
readme = "README.md"
documentation = "https://docs.rs/turnkey_client"
keywords = ["turnkey", "api", "client", "cryptography"]
categories = ["api-bindings"]

[dependencies]
mime.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
turnkey_api_key_stamper.workspace = true

[features]
reqwest_native_tls = ["reqwest/native-tls-vendored", "reqwest/native-tls-alpn"]
reqwest_brotli = ["reqwest/brotli"]
reqwest_zstd = ["reqwest/zstd"]
reqwest_hickory_dns = ["reqwest/hickory-dns"]

[dev-dependencies]
wiremock.workspace = true
http.workspace = true
base64.workspace = true
