[package]
name = "turnkey_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
heck = { version = "0.4" }
regex = { version = "1" }
prettyplease = {version = "0.2" }
proc-macro2 = { version = "1.0.95" }
prost-build = { version = "0.12.6", default-features = false }
quote = { version = "1.0" }
tonic-build = { version = "0.13" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
walkdir = { version = "2.5" }
