[package]
name = "turnkey_codegen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Generates code for the turnkey_client crate."
readme = "README.md"
repository = "https://github.com/tkhq/rust-sdk"
publish = false

[dependencies]
heck.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
prost-build.workspace = true
quote.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
tonic-build.workspace = true
walkdir.workspace = true
