[package]
name = "turnkey_enclave_encrypt"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Utilities to encrypt and decrypt data sent to and from Turnkey secure enclaves, using HPKE (RFC 9180). Used in authentication, export, and import flows."
repository = "https://github.com/tkhq/rust-sdk"
homepage = "https://turnkey.com"
readme = "README.md"
documentation = "https://docs.rs/turnkey_enclave_encrypt"
keywords = ["turnkey", "enclave", "hpke", "encryption"]
categories = ["cryptography", "encoding"]

[dependencies]
bs58 = { version = "0.5.0", features = ["std", "check"], default-features = false }
hex = { version = "0.4.3", features = ["serde"], default-features = false}
hpke = { version = "0.10", features = ["alloc", "p256", "serde_impls"], default-features = false }
p256 = { version = "0.12", features = ["ecdsa", "ecdsa-core", "std", "serde"], default-features = false }
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.12", default-features = false}
