[package]
name = "turnkey_enclave_encrypt"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "Utilities to encrypt and decrypt data sent to and from Turnkey secure enclaves, using HPKE (RFC 9180). Used in authentication, export, and import flows."
repository = "https://github.com/tkhq/rust-sdk"
homepage = "https://turnkey.com"
readme = "README.md"
documentation = "https://docs.rs/turnkey_enclave_encrypt"
keywords = ["turnkey", "enclave", "hpke", "encryption"]
categories = ["cryptography", "encoding"]

[dependencies]
bs58.workspace = true
hex = { workspace = true, features = ["serde", "alloc"] }
hpke.workspace = true
p256 = { workspace = true, features = ["ecdsa", "ecdsa-core", "std", "serde"] }
rand_core = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
thiserror.workspace = true
