[package]
name = "turnkey_examples"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Examples using the Turnkey Rust SDK"
publish = false

[dependencies]
dotenvy = { version = "0.15.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
tokio = { version = "1.44.1", default-features = false, features = ["full"] }
turnkey_enclave_encrypt = { path = "../enclave_encrypt" }
turnkey_client = { path = "../client" }
turnkey_proofs = { path = "../proofs" }
