[package]
name = "turnkey_proofs"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Utilities to parse and verify Turnkey secure enclave proofs"
repository = "https://github.com/tkhq/rust-sdk"
homepage = "https://turnkey.com"
readme = "README.md"
documentation = "https://docs.rs/turnkey_proofs"
keywords = ["turnkey", "nitro", "enclaves", "attestation", "cryptography"]
categories = ["cryptography", "hardware-support"]

[dependencies]
attestation-doc-validation = { version = "0.8.0", default-features = false }
aws-nitro-enclaves-nsm-api = { version = "0.3", features = ["nix"], default-features = false }
aws-nitro-enclaves-cose = { version = "0.5", default-features = false }
base64 = { version = "0.13", default-features = false }
borsh = { version = "1.0", features = ["std", "derive"] , default-features = false}
ciborium = { version = "0.2", default-features = false }
coset = { version = "0.3.7", default-features = false }
p384 = { version = "0.12", features = ["sha384", "ecdsa", "ecdsa-core", "std"], default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["std", "derive"] }
serde_bytes = { version = "0.11", default-features = false }
serde_cbor = { version = "0.11", default-features = false }
sha2 = { version = "0.10", default-features = false }
webpki = { version =  "0.22.4", default-features = false }
x509-cert = { version = "=0.1.0", features = ["pem"], default-features = false }
x509-parser = { version = "0.14.0", default-features = false }

[dev-dependencies]
hex = { version = "0.4.3", default-features = false, features = ["std"] }
hex-literal = { version = "0.4", default-features = false }
rand = { version = "0.8", default-features = false }
