[package]
name = "turnkey_proofs"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Utilities to parse and verify Turnkey secure enclave proofs"
repository = "https://github.com/tkhq/rust-sdk"
homepage = "https://turnkey.com"
readme = "README.md"
documentation = "https://docs.rs/turnkey_proofs"
keywords = ["turnkey", "nitro", "enclaves", "attestation", "cryptography"]
categories = ["cryptography", "hardware-support"]

[dependencies]
attestation-doc-validation.workspace = true
aws-nitro-enclaves-nsm-api.workspace = true
aws-nitro-enclaves-cose.workspace = true
base64 = { version = "0.13", default-features = false }
borsh.workspace = true
ciborium.workspace = true
coset.workspace = true
p384.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
sha2.workspace = true
webpki.workspace = true
x509-cert.workspace = true
x509-parser.workspace = true

[dev-dependencies]
hex.workspace = true
hex-literal.workspace = true
rand.workspace = true
