[package]
name = "tvc-utils"
version = "0.11.0"
edition = "2024"
license = "Apache-2.0"
description = "Test utilities for Turnkey Verifiable Cloud, including fake QuorumOS manifest generation"
repository = "https://github.com/tkhq/rust-sdk"
homepage = "https://turnkey.com"
readme = "README.md"
documentation = "https://docs.rs/tvc-utils"
keywords = ["turnkey", "tvc", "enclaves", "testing"]
categories = ["cryptography", "development-tools::testing"]

[dependencies]
qos_core = { workspace = true }
qos_p256 = { workspace = true }

[dev-dependencies]
qos_json = { workspace = true }
serde_json = { workspace = true }
