[package]
name = "tvc-utils"
version = "0.11.0"
edition = "2024"
license = "Apache-2.0"
description = "Utilities for Turnkey Verifiable Cloud: attestation and manifest verification, plus fake QuorumOS manifest generation for tests"
repository = "https://github.com/tkhq/rust-sdk"
homepage = "https://turnkey.com"
readme = "README.md"
documentation = "https://docs.rs/tvc-utils"
keywords = ["turnkey", "tvc", "enclaves", "testing"]
categories = ["cryptography", "development-tools::testing"]

[dependencies]
qos_core = { workspace = true }
qos_hex = { workspace = true }
qos_nsm = { workspace = true }
qos_p256 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
qos_json = { workspace = true }
qos_nsm = { workspace = true, features = ["mock"] }
serde_json = { workspace = true }
