[package]
name = "tvc"
version = "0.0.0-alpha.0"
edition = "2021"
license = "Apache-2.0"
description = "Experimental CLI for Turnkey Verifiable Cloud"
repository = "https://github.com/tkhq/rust-sdk"
homepage = "https://turnkey.com"

[dependencies]
qos_core = { workspace = true }
qos_p256 = { workspace = true }
turnkey_api_key_stamper = { workspace = true }
turnkey_client = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["env"] }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
