[package]
name = "tvc"
version = "0.6.3"
edition = "2021"
license = "Apache-2.0"
description = "CLI for Turnkey Verifiable Cloud"
repository = "https://github.com/tkhq/rust-sdk"
homepage = "https://turnkey.com"
readme = "README.md"
documentation = "https://docs.rs/tvc"
keywords = ["turnkey", "tvc", "enclaves", "cli"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
qos_core = { workspace = true }
qos_nsm = { workspace = true }
qos_p256 = { workspace = true }
turnkey_api_key_stamper = { workspace = true }
turnkey_client = { workspace = true }
turnkey_enclave_encrypt = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["env"] }
hex = { workspace = true }
p256 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
assert_cmd = { workspace = true }
hpke = { workspace = true }
predicates = { workspace = true }
qos_nsm = { workspace = true, features = ["mock"] }
tempfile = { workspace = true }
