[package]
name = "tvc"
version = "0.7.0"
edition = "2024"
license = "Apache-2.0"
description = "CLI for Turnkey Verifiable Cloud"
repository = "https://github.com/tkhq/rust-sdk"
homepage = "https://turnkey.com"
readme = "README.md"
documentation = "https://docs.rs/tvc"
keywords = ["turnkey", "tvc", "enclaves", "cli"]
categories = ["command-line-utilities", "cryptography"]

# Crate-local lints (intentionally NOT wired to the workspace). We enable the
# `clippy::absolute_paths` restriction lint only for this crate to push the tvc
# CLI toward short `use` imports instead of inline fully-qualified absolute
# paths at call sites (e.g. prefer `use crate::commands::display::format_egress_enabled;`
# + `format_egress_enabled(x)` over `crate::commands::display::format_egress_enabled(x)`).
# Tuning lives in the repo-root clippy.toml (max segments + allowed crates).
#
# NOTE: "warn" here becomes a hard error under `make lint`, which runs
# `cargo clippy ... -- -D warnings`. See the PR description for that tradeoff.
[lints.clippy]
absolute_paths = "warn"

[dependencies]
qos_core = { workspace = true }
qos_crypto = { workspace = true }
qos_nsm = { workspace = true }
qos_p256 = { workspace = true }
turnkey_api_key_stamper = { workspace = true }
turnkey_client = { workspace = true }
turnkey_enclave_encrypt = { workspace = true }

anyhow = { workspace = true }
aws-nitro-enclaves-nsm-api = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["env"] }
hex = { workspace = true }
inquire = { workspace = true }
p256 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
zeroize = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
hpke = { workspace = true }
predicates = { workspace = true }
qos_nsm = { workspace = true, features = ["mock"] }
rexpect = { workspace = true }
tempfile = { workspace = true }
