[package]
name = "turnkey_webauthn_stamper"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64.workspace = true
hex.workspace = true
passkey-authenticator.workspace = true
passkey-client.workspace = true
passkey-types.workspace = true
turnkey_client.workspace = true
url.workspace = true

[dev-dependencies]
coset.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
